devops-practical/devops-practical/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-practical
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - swimstack.isaacsmothers.com
    secretName: devops-practical-tls
  rules:
  - host: swimstack.isaacsmothers.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-practical
            port:
              number: 3000
